--- a/views/breakfast.html
+++ b/views/breakfast.html
@@ -15,8 +15,8 @@
 
 <div class="container">
     <h1>My Diner!</h1>
-    <p> Welcome to my diner, serving the best burgers!</p>
-    <img src="images/diner.jpg" alt="picture of a diner">
+    <p> We serve breakfast!</p>
+    <img src="images/breakfast.jpg" alt="picture of a diner">
     <label>Menus</label>
     <ul>
         <li><a href="breakfast">Breakfast</a></li>
